--- a/shared.css
+++ b/shared.css
@@ -46,7 +46,7 @@ header {
 .services-main,
 .contact-main {
   background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-    url(../images/satellite1.jpg) center/cover;
+    url(/images/satellite1.jpg) center/cover;
   height: 53vh;
   color: #ffffff;
   text-align: center;
